app/assets/sass/application.scss
// Path to assets for use with the file-url function
// in the govuk frontend toolkit's url-helpers partial
$path: "/public/images/";

// Import GOV.UK elements from /govuk-modules/, this will import the frontend toolkit and some base styles.
// Take a look in /govuk-modules/_govuk-elements.scss to see which files are imported.
@import 'govuk-elements';

// Take a look at in app/assets/sass/patterns/ to see which files are imported.
@import 'patterns/check-your-answers';
@import 'patterns/task-list';

// Related items
// (These styles will be moved to GOV.UK elements, duplicating here for now.)
.govuk-related-items {
  margin-top: $gutter;
  border-top: 10px solid $govuk-blue;
  padding-top: 5px;

  .heading-medium {
    margin-top: 0.3em;
    margin-bottom: 0.5em;
  }

  li {
    margin-bottom: 10px;
    list-style-type: none;
  }
}

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you

.release-container {
  border-left: solid 6px #333;
  padding-left: 20px;
  margin-left: 10px;

  .release {
    min-height: 280px;

    .pointer {
      position: relative;
      margin-top: 0px;
      margin-left: -20px;
      width: 10px;
      height: 6px;
      background-color: #333;
    }
  }
}

